# cq-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  task.yaml
.github/workflows/: ci.yaml  release.yaml
src/cq/: __init__.py  client.py  models.py  reflect.py  scoring.py  store.py
src/cq/cqpb/: api_pb2.py  api_pb2.pyi  knowledge_unit_pb2.py  knowledge_unit_pb2.pyi  review_pb2.py  review_pb2.pyi  scoring_pb2.py  scoring_pb2.pyi
src/cq/protocol/: __init__.py  skill.md
tests/: test_client.py  test_models.py  test_proto_parity.py  test_protocol.py  test_reflect.py  test_scoring.py  test_store.py
tests/testdata/: README.md  go_flagged_unit.json  go_unit.json  ku_002.json  ku_003.json  ku_004.json  ku_005.json  ku_006.json  ku_007.json  ku_008.json  ku_009.json  ku_010.json  ku_011.json  ku_012.json  python_flagged_unit.json  python_real_unit.json  python_team_confirmed.json  python_unit.json
